[package]
name = "finalcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
petgraph = "0.6"
rayon = "1.8"
fixedbitset = "0.4.0"

[profile.release]
codegen-units = 1